trying nginx site

--- a/versions_site.html
+++ b/versions_site.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Software Versions</h1>
     <ul>
-        <li><a href="/home/ofek/cdlog_install_package.tar.gz" download>Software Version 1</a></li>
+        <li><a href="/home/ofek/cdlog_install_package.tar.gz" download='/home/ofek/cdlog_install_package.tar.gz'>Software Version 1</a></li>
         <li><a href="software_version_2.zip">Software Version 2</a></li>
         <li><a href="software_versionls_3.zip">Software Version 3</a></li>
         <li><a href="software_version_4.zip">Software Version 4</a></li>
