--- a/versions_site.html
+++ b/versions_site.html
@@ -50,10 +50,18 @@
         a:hover {
             background-color: #0056b3;
         }
+
+        .logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 100px; /* Adjust size as needed */
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <img class="logo" src="/data/logo.jpg" alt="Logo">
         <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
             <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
