--- a/tryhtml.html
+++ b/tryhtml.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Software Downloads</h1>
+        <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
             <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
             <li><a href="/downloads/cdlog_install_package_v2.tar.gz" download>Download Version 2</a></li>
