--- a/versions_site.html
+++ b/versions_site.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="logo" src="/data/logo.jpg" alt="Logo">
+        <img class="logo" src="logo.jpg" alt="Logo">
         <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
             <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
