--- a/versions_site.html
+++ b/versions_site.html
@@ -69,7 +69,7 @@
             <li><a href="/downloads/cdlog_install_package_v3.tar.gz" download>Download Version 3</a></li>
             <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>Download Version 4</a></li>
         </ul>
-        <h2>Copyrite reserved to Ofek Ellenbogen</h2>
     </div>
+    <h2>Copyright reserved to Ofek Ellenbogen</h2>
 </body>
 </html>
