--- a/versions_site.html
+++ b/versions_site.html
@@ -20,7 +20,14 @@
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-
+        .copyright_container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+        }
         h1 {
             text-align: center;
             margin-bottom: 30px;
@@ -70,6 +77,8 @@
             <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>Download Version 4</a></li>
         </ul>
     </div>
-    <h2>Copyright reserved to Ofek Ellenbogen</h2>
+    <div class="copyright_container">
+         <h2> © Ofek Ellenbogen 2024</h2>
+    </div>
 </body>
 </html>
