--- a/versions_site.html
+++ b/versions_site.html
@@ -71,10 +71,10 @@
         <img class="logo" src="logo.jpg" alt="Logo">
         <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
-            <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
-            <li><a href="/downloads/cdlog_install_package_v2.tar.gz" download>CDLOG agent - rpm (linux)</a></li>
-            <li><a href="/downloads/cdlog_install_package_v3.tar.gz" download>CDLOG agent - zip (windows)</a></li>
-            <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>CDLOG agent - msi (windows)</a></li>
+            <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>linux - tar.gz</a></li>
+            <li><a href="/downloads/cdlog_install_package_v2.tar.gz" download>linux - rpm</a></li>
+            <li><a href="/downloads/cdlog_install_package_v3.tar.gz" download>windows - zip</a></li>
+            <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>windows - msi</a></li>
         </ul>
     </div>
     <div class="copyright_container">
