--- a/versions_site.html
+++ b/versions_site.html
@@ -71,8 +71,8 @@
         <img class="logo" src="logo.jpg" alt="Logo">
         <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
-            <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>linux - tar.gz</a></li>
-            <li><a href="http://4.246.142.175:81/downloads/cdlog-2.0-1.x86_64.rpm" download>linux - rpm</a></li>
+            <li><a href="https://4.246.142.175/downloads/cdlog_install_package.tar.gz" download>linux - tar.gz</a></li>
+            <li><a href="https://4.246.142.175/downloads/cdlog-2.0-1.x86_64.rpm" download>linux - rpm</a></li>
             <li><a href="/downloads/cdlog_install_package_v3.tar.gz" download>windows - zip</a></li>
             <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>windows - msi</a></li>
         </ul>
