--- a/tryhtml.html
+++ b/tryhtml.html
@@ -56,7 +56,7 @@
     <div class="container">
         <h1>Thanks for choosing cdlog, you are welcome to download each one of our versions</h1>
         <ul>
-            <li><a href="http://4.246.142.175:81/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
+            <li><a href="http://IP/downloads/cdlog_install_package.tar.gz" download>CDLOG agent - tar.gz (linux)</a></li>
             <li><a href="/downloads/cdlog_install_package_v2.tar.gz" download>Download Version 2</a></li>
             <li><a href="/downloads/cdlog_install_package_v3.tar.gz" download>Download Version 3</a></li>
             <li><a href="/downloads/cdlog_install_package_v4.tar.gz" download>Download Version 4</a></li>
